@@ -1,5 +1,5 @@
 {
-    "save": "E:\\Users\\Alex\\OneDrive\\Memorease\\Download",
+    "save": "E:\\Users\\Alex\\Onedrive\\Memorease\\Download",
     "photos": "E:\\Users\\Alex\\Onedrive\\Memorease\\Photos",
     "videos": "E:\\Users\\Alex\\Onedrive\\Memorease\\Videos"
 }
